# git-fs

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  SKILL.md  UPDATE.md  justfile  mcp.config.example.json  package.json  xaa
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: gitfs-hook-edit.ps1  gitfs-hook-read.ps1  gitfs-hook-write.ps1  gitfs-session-start.ps1
.claude/skills/merge/: SKILL.md
.github/workflows/: ci.yml  release.yml
.machine/: agent.md  glossary.csv  personas.md  project.md
.machine/personas/: git-plumbing.md  overlay-integrity.md  resilience.md  zero-dep-purist.md
.machine/plans/: jolly-discovering-scone.md
.machine/reports/: 2026-06-16-statusline-not-wired-by-oil.md
agents/claude/: install.md  update.md
docs/: multi-agent-session.md
git-fs/: Cargo.toml  README.md  build.mjs  justfile  package-lock.json  package.json  tsconfig.json
git-fs-ts/: README.md  SPIKE.md  build.mjs  package-lock.json  package.json
git-fs-ts/bench/: mcp-driver.ts  session-500.ts
git-fs-ts/src/: cli.ts  diff3.d.ts  hooks.ts  mcp.ts  store.ts
git-fs-ts/test/: store.test.ts
git-fs/bench/: mcp-driver.ts  session-500.ts
git-fs/src/: cli.ts  hooks.ts  main.rs  mcp.ts  store.rs  store.ts
git-fs/test/: store.test.ts
hooks/: hooks.json
skills/git-fs/: SKILL.md
src/: hooks.mjs  mcp.mjs  store.mjs
test/: store.test.mjs
